Show all samples in bulk validation scatter (no subsampling)
- Remove 2,000-point subsampling limit from bulk RNA-seq validation data
  so all GTEx (19,759) and TCGA (11,069) samples are displayed
- GTEx uses stratified_scatter with integer-encoded tissue labels and
  2-decimal precision for compact storage; donor_scatter skipped (redundant)
- TCGA falls back to donor_scatter since cancer_type annotations are missing
  (stratified_scatter is empty)
- Update JS to decode integer group labels via tdata.groups lookup array
- Final file size: 83.9 MB with all points included

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -12025,9 +12025,15 @@
             const unitLabel = opts.unitLabel || 'samples';
 
             // Filter by group label (tissue/celltype) if points have 3rd element
+            // Supports both string labels and integer-encoded labels (decoded via tdata.groups)
             let filteredPoints = points;
             if (celltypeFilter && points.length > 0 && points[0].length >= 3) {
-                filteredPoints = points.filter(p => p[2] === celltypeFilter);
+                const groups = tdata.groups || [];
+                const filterIdx = groups.indexOf(celltypeFilter);
+                filteredPoints = points.filter(p => {
+                    if (typeof p[2] === 'number') return p[2] === filterIdx;
+                    return p[2] === celltypeFilter;
+                });
             }
 
             // Filter out non-expressing samples (expression at mode minimum = zero-expression z-score)
@@ -12104,8 +12110,7 @@
                 pvalStr = pval < 0.001 ? pval.toExponential(1) : pval.toFixed(4);
             }
 
-            const subsampledNote = isFiltered ? ' (shown)' : '';
-            let annoText = `Spearman \u03c1 = ${rho !== null ? rho.toFixed(3) : 'N/A'}<br>p = ${pvalStr}<br>n = ${typeof nDisplay === 'number' ? nDisplay.toLocaleString() : nDisplay}${subsampledNote} ${unitLabel}`;
+            let annoText = `Spearman \u03c1 = ${rho !== null ? rho.toFixed(3) : 'N/A'}<br>p = ${pvalStr}<br>n = ${typeof nDisplay === 'number' ? nDisplay.toLocaleString() : nDisplay} ${unitLabel}`;
             if (tdata.rho_ci) {
                 annoText += `<br>95% CI: [${tdata.rho_ci[0]}, ${tdata.rho_ci[1]}]`;
             }
