Show gene names in bulk validation dropdown for all targets
Always display gene symbol in parentheses (e.g., "Activin A (INHBA)",
"IFNG (IFNG)") so users can identify the mapped gene for every target.

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -12183,7 +12183,7 @@
                 const opt = document.createElement('option');
                 opt.value = t;
                 const gene = scatterData[t]?.gene;
-                opt.textContent = t + (gene && gene !== t ? ` (${gene})` : '');
+                opt.textContent = gene ? `${t} (${gene})` : t;
                 sel.appendChild(opt);
             });
 
