Add frontend chart component library, state management, and data loader (Round 2B)
- Create 7 reusable chart components (heatmap, boxplot, scatter, volcano, bar, lollipop, violin) with standardized Plotly/D3 interfaces
- Add AppState reactive store with publish/subscribe pattern for cross-component communication
- Add DataLoader with request deduplication, caching, and progressive loading (replaces embedded_data.js)
- Add lazy-loaded TabPanel, FilterBar, LoadingSkeleton, and ExportButton UI components
- Add ~250 lines of component CSS styles
- Include atlas-detail-example.js demonstrating tab/chart integration pattern

--- a/cytoatlas-api/static/index.html
+++ b/cytoatlas-api/static/index.html
@@ -497,8 +497,22 @@
     </template>
 
     <!-- JavaScript -->
+    <!-- Core -->
     <script src="/static/js/api.js"></script>
     <script src="/static/js/router.js"></script>
+    <script src="/static/js/store.js"></script>
+    <script src="/static/js/data-loader.js"></script>
+
+    <!-- Chart Components -->
+    <script src="/static/js/components/charts/heatmap-chart.js"></script>
+    <script src="/static/js/components/charts/boxplot-chart.js"></script>
+    <script src="/static/js/components/charts/scatter-chart.js"></script>
+    <script src="/static/js/components/charts/volcano-chart.js"></script>
+    <script src="/static/js/components/charts/bar-chart.js"></script>
+    <script src="/static/js/components/charts/lollipop-chart.js"></script>
+    <script src="/static/js/components/charts/violin-chart.js"></script>
+
+    <!-- UI Components -->
     <script src="/static/js/components/atlas-card.js"></script>
     <script src="/static/js/components/heatmap.js"></script>
     <script src="/static/js/components/scatter.js"></script>
@@ -506,6 +520,12 @@
     <script src="/static/js/components/chat-widget.js"></script>
     <script src="/static/js/components/sankey.js"></script>
     <script src="/static/js/components/forest-plot.js"></script>
+    <script src="/static/js/components/tab-panel.js"></script>
+    <script src="/static/js/components/filter-bar.js"></script>
+    <script src="/static/js/components/loading-skeleton.js"></script>
+    <script src="/static/js/components/export-button.js"></script>
+
+    <!-- Pages -->
     <script src="/static/js/pages/home.js"></script>
     <script src="/static/js/pages/explore.js"></script>
     <script src="/static/js/pages/atlas-detail.js"></script>
@@ -516,6 +536,8 @@
     <script src="/static/js/pages/gene-detail.js"></script>
     <script src="/static/js/pages/submit.js"></script>
     <script src="/static/js/pages/chat.js"></script>
+
+    <!-- App Initialization -->
     <script src="/static/js/app.js"></script>
 </body>
 </html>
