Integrate SpatialCorpus-110M, parse_10M, and Tahoe-100M datasets
Add perturbation and spatial bounded contexts expanding CytoAtlas from
~19M to ~240M cells. Implements pipeline scripts (18-25), API routers
(~45 endpoints), services, multi-database DuckDB support, MCP tools,
visualization pages, documentation (ADR-004, dataset specs, pipeline
docs), skills, and 295 tests (234 unit + 61 equivalence).

--- a/cytoatlas-api/static/index.html
+++ b/cytoatlas-api/static/index.html
@@ -35,6 +35,8 @@
                 <a href="/explore" class="nav-link" data-page="explore">Explore</a>
                 <a href="/validate" class="nav-link" data-page="validate">Validate</a>
                 <a href="/compare" class="nav-link" data-page="compare">Compare</a>
+                <a href="/perturbation" class="nav-link" data-page="perturbation">Perturbation</a>
+                <a href="/spatial" class="nav-link" data-page="spatial">Spatial</a>
                 <a href="/submit" class="nav-link" data-page="submit">Submit</a>
                 <a href="/chat" class="nav-link" data-page="chat">Chat</a>
                 <a href="/about" class="nav-link" data-page="about">About</a>
@@ -521,6 +523,8 @@
     <script src="/static/js/pages/gene-detail.js"></script>
     <script src="/static/js/pages/submit.js"></script>
     <script src="/static/js/pages/chat.js"></script>
+    <script src="/static/js/pages/perturbation.js"></script>
+    <script src="/static/js/pages/spatial.js"></script>
 
     <!-- App Initialization -->
     <script src="/static/js/app.js"></script>
